--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>A Study In Max Heap by robin-thomas</title>
+    <title>Implementaion of Max Heap in C - Robin Thomas</title>
   </head>
 
   <body>
